class Habitacion {
    constructor(id, numero, tipo, estado, precio, duracionHoras) {
        this.id = id;
        this.numero = numero;
        this.tipo = tipo;
        this.estado = estado;
        this.precio = precio;
        this.duracionHoras = duracionHoras;
    }
}
